add blog and about

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
----
-layout: default
+--- 
+layout: default 
 title: Alex Finnegan
----
+---  
+<!-- The above is called Jekyll front-matter -->
+<!-- layout: default indicates that content (below) is injected into _layouts/default.html-->
+<div class="blurb">
+	<h1>Welcome to Alex Finnegan's Webpage</h1>
 
-
+</div><!-- /.blurb -->
