--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Alex Finnegan
 <!-- The above is called Jekyll front-matter -->
 <!-- layout: default indicates that content (below) is injected into _layouts/default.html-->
 <div class="blurb">
-	<h1>Welcome to Alex Finnegan's Webpage</h1>
+	<h1>Welcome to Alex Finnegan's Web Page</h1>
 
 
 	<h3>Most recent posts: </h3>
